spectec/test/elab/neg/ctx-dec-tparam-duplicate.spectec
;; A dec declaration carries the same type-parameter name twice.

dec $f<T, T> : nat
